Update login page components

--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -70,6 +70,7 @@
   --static-40: hsla(0, 0%, 0%, 0.4);
 
   --danger: hsl(0, 80%, 33%);
+  --danger-500: hsl(0, 80%, 50%);
 }
 
 :root[data-theme="dark"] {
