--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,4 +1,6 @@
 @use "theme";
+@use "typography";
+@use "theme.utils" as utils;
 
 body {
   background-color: var(--background);
@@ -8,32 +10,14 @@ body, input {
   color: var(--text);
 }
 
-h1, h2, h3, h4, h5 {
-  line-height: 1.5;
-  margin: 0;
-}
+a {
+  background-color: var(--primary-200);
+  color: var(--primary-700);
+  padding: utils.spacing(0.2) utils.spacing(0.2);
+  border-radius: var(--radius-xs);
 
-p, label, input {
-  font-size: var(--p);
-  margin: 0;
-}
-
-small {
-  font-size: var(--text-small);
-}
-
-h1 {
-  font-size: var(--h1);
-}
-
-h2 {
-  font-size: var(--h2);
-}
-
-h3 {
-  font-size: var(--h3);
-}
-
-h4 {
-  font-size: var(--h4);
+  &:hover {
+    text-decoration: underline;
+    background-color: var(--primary-100);
+  }
 }
