--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -155,6 +155,7 @@
   --radius-sm: var(--radius);
   --radius-md: calc(var(--radius) * 1.5);
   --radius-lg: calc(var(--radius) * 2);
+  --border: 0.4rem;
 
   // Typography
   --font-scale: 1.333;
