--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -69,8 +69,10 @@
   --static-10: hsla(0, 0%, 0%, 0.1);
   --static-40: hsla(0, 0%, 0%, 0.4);
 
-  --danger: hsl(0, 80%, 33%);
+  --danger: hsl(0, 80%, 60%);
   --danger-500: hsl(0, 80%, 50%);
+  --success: hsl(138, 75%, 60%);
+  --success-500: hsl(138, 75%, 50%);
 }
 
 :root[data-theme="dark"] {
@@ -144,8 +146,10 @@
   --static-10: hsla(0, 0%, 100%, 0.1);
   --static-40: hsla(0, 0%, 100%, 0.4);
 
-  --danger: hsl(0, 80%, 33%);
+  --danger: hsl(0, 80%, 40%);
   --danger-500: hsl(0, 80%, 50%);
+  --success: hsl(138, 75%, 40%);
+  --success-500: hsl(138, 75%, 50%);
 }
 
 :root {
@@ -158,7 +162,7 @@
   --border: 0.4rem;
 
   // Typography
-  --font-scale: 1.333;
+  --font-scale: 1.3;
   --p: 1rem;
   --h5: calc(var(--p)* var(--font-scale));
   --h4: calc(var(--h5)* var(--font-scale));
