Add border-box and node requirement

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -2,6 +2,10 @@
 @use "typography";
 @use "theme.utils" as utils;
 
+*, *::after, *::before {
+  box-sizing: border-box;
+}
+
 body {
   background-color: var(--background);
   padding: 0;
