--- a/src/shared/components/typography/styles.module.scss
+++ b/src/shared/components/typography/styles.module.scss
@@ -1,32 +1,3 @@
-
-.danger {
-  color: var(--danger);
-}
-
-.warning {
-  color: var(--text);
-}
-
-.info {
-  color: var(--text);
-}
-
-.success {
-  color: var(--success);
-}
-
-.primary {
-  color: var(--primary);
-}
-
-.secondary {
-  color: var(--secondary);
-}
-
-.text {
-  color: var(--text);
-}
-
-.text-500 {
-  color: var(--text-500);
+.muted {
+  filter: brightness(50%);
 }
