--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -1,155 +1,200 @@
+@use "sass:map";
+
+$themes: (
+  "light": (
+    "text": hsl(210, 11%, 7%),
+    "background": hsl(225, 25%, 97%),
+    "on-background": hsl(210, 11%, 7%),
+    "primary": hsl(222, 46%, 25%),
+    "on-primary": hsl(225, 25%, 97%),
+    "secondary": hsl(222, 65%, 69%),
+    "on-secondary": hsl(210, 11%, 7%),
+    "accent": hsl(223, 82%, 49%),
+
+    "text-50": hsl(220, 12%, 95%),
+    "text-100": hsl(204, 10%, 90%),
+    "text-200": hsl(210, 12%, 80%),
+    "text-300": hsl(208, 11%, 70%),
+    "text-400": hsl(210, 11%, 60%),
+    "text-500": hsl(211, 11%, 50%),
+    "text-600": hsl(210, 11%, 40%),
+    "text-700": hsl(212, 11%, 30%),
+    "text-800": hsl(210, 12%, 20%),
+    "text-900": hsl(216, 10%, 10%),
+    "text-950": hsl(200, 12%, 5%),
+
+    "background-50": hsl(220, 23%, 95%),
+    "background-100": hsl(226, 25%, 90%),
+    "background-200": hsl(224, 25%, 80%),
+    "background-300": hsl(225, 25%, 70%),
+    "background-400": hsl(226, 25%, 60%),
+    "background-500": hsl(225, 25%, 50%),
+    "background-600": hsl(226, 25%, 40%),
+    "background-700": hsl(225, 25%, 30%),
+    "background-800": hsl(224, 25%, 20%),
+    "background-900": hsl(226, 25%, 10%),
+    "background-950": hsl(230, 23%, 5%),
+
+    "primary-50": hsl(220, 46%, 95%),
+    "primary-100": hsl(222, 45%, 90%),
+    "primary-200": hsl(222, 45%, 80%),
+    "primary-300": hsl(222, 46%, 70%),
+    "primary-400": hsl(222, 46%, 60%),
+    "primary-500": hsl(222, 46%, 50%),
+    "primary-600": hsl(222, 46%, 40%),
+    "primary-700": hsl(222, 46%, 30%),
+    "primary-800": hsl(222, 45%, 20%),
+    "primary-900": hsl(222, 45%, 10%),
+    "primary-950": hsl(225, 46%, 5%),
+
+    "secondary-50": hsl(222, 68%, 95%),
+    "secondary-100": hsl(222, 65%, 90%),
+    "secondary-200": hsl(222, 65%, 80%),
+    "secondary-300": hsl(222, 65%, 70%),
+    "secondary-400": hsl(222, 65%, 60%),
+    "secondary-500": hsl(222, 65%, 50%),
+    "secondary-600": hsl(222, 65%, 40%),
+    "secondary-700": hsl(222, 65%, 30%),
+    "secondary-800": hsl(222, 65%, 20%),
+    "secondary-900": hsl(222, 65%, 10%),
+    "secondary-950": hsl(222, 68%, 5%),
+
+    "accent-50": hsl(223, 84%, 95%),
+    "accent-100": hsl(224, 80%, 90%),
+    "accent-200": hsl(223, 82%, 80%),
+    "accent-300": hsl(223, 82%, 70%),
+    "accent-400": hsl(223, 82%, 60%),
+    "accent-500": hsl(223, 82%, 50%),
+    "accent-600": hsl(223, 82%, 40%),
+    "accent-700": hsl(223, 82%, 30%),
+    "accent-800": hsl(223, 82%, 20%),
+    "accent-900": hsl(224, 80%, 10%),
+    "accent-950": hsl(223, 84%, 5%),
+
+    "static-5": hsla(0, 0%, 0%, 0.05),
+    "static-10": hsla(0, 0%, 0%, 0.1),
+    "static-40": hsla(0, 0%, 0%, 0.4),
+    "danger": hsl(0, 80%, 45%),
+    "danger-500": hsl(0, 80%, 50%),
+    "success": hsl(120, 75%, 45%),
+    "success-500": hsl(120, 75%, 50%),
+    "disabled": hsla(0, 0%, 0%, 0.05),
+  ),
+  "dark": (
+    "text": hsl(210, 11%, 93%),
+    "background": hsl(225, 25%, 3%),
+    "on-background": hsl(210, 11%, 93%),
+    "primary": hsl(222, 46%, 75%),
+    "on-primary": hsl(225, 25%, 3%),
+    "secondary": hsl(222, 65%, 31%),
+    "on-secondary": hsl(210, 11%, 93%),
+    "accent": hsl(223, 82%, 51%),
+
+    "text-50": hsl(200, 12%, 5%),
+    "text-100": hsl(216, 10%, 10%),
+    "text-200": hsl(210, 12%, 20%),
+    "text-300": hsl(212, 11%, 30%),
+    "text-400": hsl(210, 11%, 40%),
+    "text-500": hsl(211, 11%, 50%),
+    "text-600": hsl(210, 11%, 60%),
+    "text-700": hsl(208, 11%, 70%),
+    "text-800": hsl(210, 12%, 80%),
+    "text-900": hsl(204, 10%, 90%),
+    "text-950": hsl(220, 12%, 95%),
+
+    "background-50": hsl(230, 23%, 5%),
+    "background-100": hsl(226, 25%, 10%),
+    "background-200": hsl(224, 25%, 20%),
+    "background-300": hsl(225, 25%, 30%),
+    "background-400": hsl(226, 25%, 40%),
+    "background-500": hsl(225, 25%, 50%),
+    "background-600": hsl(226, 25%, 60%),
+    "background-700": hsl(225, 25%, 70%),
+    "background-800": hsl(224, 25%, 80%),
+    "background-900": hsl(226, 25%, 90%),
+    "background-950": hsl(220, 23%, 95%),
+
+    "primary-50": hsl(225, 46%, 5%),
+    "primary-100": hsl(222, 45%, 10%),
+    "primary-200": hsl(222, 45%, 20%),
+    "primary-300": hsl(222, 46%, 30%),
+    "primary-400": hsl(222, 46%, 40%),
+    "primary-500": hsl(222, 46%, 50%),
+    "primary-600": hsl(222, 46%, 60%),
+    "primary-700": hsl(222, 46%, 70%),
+    "primary-800": hsl(222, 45%, 80%),
+    "primary-900": hsl(222, 45%, 90%),
+    "primary-950": hsl(220, 46%, 95%),
+
+    "secondary-50": hsl(222, 68%, 5%),
+    "secondary-100": hsl(222, 65%, 10%),
+    "secondary-200": hsl(222, 65%, 20%),
+    "secondary-300": hsl(222, 65%, 30%),
+    "secondary-400": hsl(222, 65%, 40%),
+    "secondary-500": hsl(222, 65%, 50%),
+    "secondary-600": hsl(222, 65%, 60%),
+    "secondary-700": hsl(222, 65%, 70%),
+    "secondary-800": hsl(222, 65%, 80%),
+    "secondary-900": hsl(222, 65%, 90%),
+    "secondary-950": hsl(222, 68%, 95%),
+
+    "accent-50": hsl(223, 84%, 5%),
+    "accent-100": hsl(224, 80%, 10%),
+    "accent-200": hsl(223, 82%, 20%),
+    "accent-300": hsl(223, 82%, 30%),
+    "accent-400": hsl(223, 82%, 40%),
+    "accent-500": hsl(223, 82%, 50%),
+    "accent-600": hsl(223, 82%, 60%),
+    "accent-700": hsl(223, 82%, 70%),
+    "accent-800": hsl(223, 82%, 80%),
+    "accent-900": hsl(224, 80%, 90%),
+    "accent-950": hsl(223, 84%, 95%),
+
+    "static-5": hsla(0, 0%, 100%, 0.05),
+    "static-10": hsla(0, 0%, 100%, 0.1),
+    "static-40": hsla(0, 0%, 100%, 0.4),
+    "danger": hsl(0, 80%, 40%),
+    "danger-500": hsl(0, 80%, 50%),
+    "success": hsl(120, 75%, 50%),
+    "success-500": hsl(120, 75%, 50%),
+    "disabled": hsla(0, 0%, 0%, 0.05),
+  ),
+);
+
 :root[data-theme="light"] {
-  --text: hsl(210, 11%, 7%);
-  --background: hsl(225, 25%, 97%);
-  --primary: hsl(222, 46%, 25%);
-  --secondary: hsl(222, 65%, 69%);
-  --accent: hsl(223, 82%, 49%);
-  
-  --text-50: hsl(220, 12%, 95%);
-  --text-100: hsl(204, 10%, 90%);
-  --text-200: hsl(210, 12%, 80%);
-  --text-300: hsl(208, 11%, 70%);
-  --text-400: hsl(210, 11%, 60%);
-  --text-500: hsl(211, 11%, 50%);
-  --text-600: hsl(210, 11%, 40%);
-  --text-700: hsl(212, 11%, 30%);
-  --text-800: hsl(210, 12%, 20%);
-  --text-900: hsl(216, 10%, 10%);
-  --text-950: hsl(200, 12%, 5%);
+  @each $color, $value in map.get($themes, "light") {
+    --#{$color}: #{$value};
 
-  --background-50: hsl(220, 23%, 95%);
-  --background-100: hsl(226, 25%, 90%);
-  --background-200: hsl(224, 25%, 80%);
-  --background-300: hsl(225, 25%, 70%);
-  --background-400: hsl(226, 25%, 60%);
-  --background-500: hsl(225, 25%, 50%);
-  --background-600: hsl(226, 25%, 40%);
-  --background-700: hsl(225, 25%, 30%);
-  --background-800: hsl(224, 25%, 20%);
-  --background-900: hsl(226, 25%, 10%);
-  --background-950: hsl(230, 23%, 5%);
+    .bg-#{$color} {
+      background-color: $value;
+    }
 
-  --primary-50: hsl(220, 46%, 95%);
-  --primary-100: hsl(222, 45%, 90%);
-  --primary-200: hsl(222, 45%, 80%);
-  --primary-300: hsl(222, 46%, 70%);
-  --primary-400: hsl(222, 46%, 60%);
-  --primary-500: hsl(222, 46%, 50%);
-  --primary-600: hsl(222, 46%, 40%);
-  --primary-700: hsl(222, 46%, 30%);
-  --primary-800: hsl(222, 45%, 20%);
-  --primary-900: hsl(222, 45%, 10%);
-  --primary-950: hsl(225, 46%, 5%);
+    .color-#{$color} {
+      color: $value;
+    }
 
-  --secondary-50: hsl(222, 68%, 95%);
-  --secondary-100: hsl(222, 65%, 90%);
-  --secondary-200: hsl(222, 65%, 80%);
-  --secondary-300: hsl(222, 65%, 70%);
-  --secondary-400: hsl(222, 65%, 60%);
-  --secondary-500: hsl(222, 65%, 50%);
-  --secondary-600: hsl(222, 65%, 40%);
-  --secondary-700: hsl(222, 65%, 30%);
-  --secondary-800: hsl(222, 65%, 20%);
-  --secondary-900: hsl(222, 65%, 10%);
-  --secondary-950: hsl(222, 68%, 5%);
-
-  --accent-50: hsl(223, 84%, 95%);
-  --accent-100: hsl(224, 80%, 90%);
-  --accent-200: hsl(223, 82%, 80%);
-  --accent-300: hsl(223, 82%, 70%);
-  --accent-400: hsl(223, 82%, 60%);
-  --accent-500: hsl(223, 82%, 50%);
-  --accent-600: hsl(223, 82%, 40%);
-  --accent-700: hsl(223, 82%, 30%);
-  --accent-800: hsl(223, 82%, 20%);
-  --accent-900: hsl(224, 80%, 10%);
-  --accent-950: hsl(223, 84%, 5%);
-
-  --static-5: hsla(0, 0%, 0%, 0.05);
-  --static-10: hsla(0, 0%, 0%, 0.1);
-  --static-40: hsla(0, 0%, 0%, 0.4);
-
-  --danger: hsl(0, 80%, 60%);
-  --danger-500: hsl(0, 80%, 50%);
-  --success: hsl(138, 75%, 60%);
-  --success-500: hsl(138, 75%, 50%);
+    .stroke-#{$color} {
+      stroke: $value;
+    }
+  }
 }
 
 :root[data-theme="dark"] {
-  --text: hsl(210, 11%, 93%);
-  --background: hsl(225, 25%, 3%);
-  --primary: hsl(222, 46%, 75%);
-  --secondary: hsl(222, 65%, 31%);
-  --accent: hsl(223, 82%, 51%);
+  @each $color, $value in map.get($themes, "dark") {
+    --#{$color}: #{$value};
 
-  --text-50: hsl(200, 12%, 5%);
-  --text-100: hsl(216, 10%, 10%);
-  --text-200: hsl(210, 12%, 20%);
-  --text-300: hsl(212, 11%, 30%);
-  --text-400: hsl(210, 11%, 40%);
-  --text-500: hsl(211, 11%, 50%);
-  --text-600: hsl(210, 11%, 60%);
-  --text-700: hsl(208, 11%, 70%);
-  --text-800: hsl(210, 12%, 80%);
-  --text-900: hsl(204, 10%, 90%);
-  --text-950: hsl(220, 12%, 95%);
+    .bg-#{$color} {
+      background-color: $value;
+    }
 
-  --background-50: hsl(230, 23%, 5%);
-  --background-100: hsl(226, 25%, 10%);
-  --background-200: hsl(224, 25%, 20%);
-  --background-300: hsl(225, 25%, 30%);
-  --background-400: hsl(226, 25%, 40%);
-  --background-500: hsl(225, 25%, 50%);
-  --background-600: hsl(226, 25%, 60%);
-  --background-700: hsl(225, 25%, 70%);
-  --background-800: hsl(224, 25%, 80%);
-  --background-900: hsl(226, 25%, 90%);
-  --background-950: hsl(220, 23%, 95%);
+    .color-#{$color} {
+      color: $value;
+    }
 
-  --primary-50: hsl(225, 46%, 5%);
-  --primary-100: hsl(222, 45%, 10%);
-  --primary-200: hsl(222, 45%, 20%);
-  --primary-300: hsl(222, 46%, 30%);
-  --primary-400: hsl(222, 46%, 40%);
-  --primary-500: hsl(222, 46%, 50%);
-  --primary-600: hsl(222, 46%, 60%);
-  --primary-700: hsl(222, 46%, 70%);
-  --primary-800: hsl(222, 45%, 80%);
-  --primary-900: hsl(222, 45%, 90%);
-  --primary-950: hsl(220, 46%, 95%);
-
-  --secondary-50: hsl(222, 68%, 5%);
-  --secondary-100: hsl(222, 65%, 10%);
-  --secondary-200: hsl(222, 65%, 20%);
-  --secondary-300: hsl(222, 65%, 30%);
-  --secondary-400: hsl(222, 65%, 40%);
-  --secondary-500: hsl(222, 65%, 50%);
-  --secondary-600: hsl(222, 65%, 60%);
-  --secondary-700: hsl(222, 65%, 70%);
-  --secondary-800: hsl(222, 65%, 80%);
-  --secondary-900: hsl(222, 65%, 90%);
-  --secondary-950: hsl(222, 68%, 95%);
-
-  --accent-50: hsl(223, 84%, 5%);
-  --accent-100: hsl(224, 80%, 10%);
-  --accent-200: hsl(223, 82%, 20%);
-  --accent-300: hsl(223, 82%, 30%);
-  --accent-400: hsl(223, 82%, 40%);
-  --accent-500: hsl(223, 82%, 50%);
-  --accent-600: hsl(223, 82%, 60%);
-  --accent-700: hsl(223, 82%, 70%);
-  --accent-800: hsl(223, 82%, 80%);
-  --accent-900: hsl(224, 80%, 90%);
-  --accent-950: hsl(223, 84%, 95%);
-
-  --static-5: hsla(0, 0%, 100%, 0.05);
-  --static-10: hsla(0, 0%, 100%, 0.1);
-  --static-40: hsla(0, 0%, 100%, 0.4);
-
-  --danger: hsl(0, 80%, 40%);
-  --danger-500: hsl(0, 80%, 50%);
-  --success: hsl(138, 75%, 40%);
-  --success-500: hsl(138, 75%, 50%);
+    .stroke-#{$color} {
+      stroke: $value;
+    }
+  }
 }
 
 :root {
@@ -160,14 +205,4 @@
   --radius-md: calc(var(--radius) * 1.5);
   --radius-lg: calc(var(--radius) * 2);
   --border: 0.4rem;
-
-  // Typography
-  --font-scale: 1.3;
-  --p: 1rem;
-  --h5: calc(var(--p)* var(--font-scale));
-  --h4: calc(var(--h5)* var(--font-scale));
-  --h3: calc(var(--h4)* var(--font-scale));
-  --h2: calc(var(--h3)* var(--font-scale));
-  --h1: calc(var(--h2)* var(--font-scale));
-  --text-small: calc(var(--p) / var(--font-scale));
 }
