--- a/src/theme/typography.scss
+++ b/src/theme/typography.scss
@@ -1,3 +1,14 @@
+:root {
+  --font-scale: 1.3;
+  --p: 1rem;
+  --h5: calc(var(--p)* var(--font-scale));
+  --h4: calc(var(--h5)* var(--font-scale));
+  --h3: calc(var(--h4)* var(--font-scale));
+  --h2: calc(var(--h3)* var(--font-scale));
+  --h1: calc(var(--h2)* var(--font-scale));
+  --text-small: calc(var(--p) / var(--font-scale));
+}
+
 h1, h2, h3, h4, h5 {
   line-height: 1.5;
   margin: 0;
