Fix input color

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -8,10 +8,8 @@
 
 body {
   background-color: var(--background);
+  stroke: var(--on-background);
+  color: var(--on-background);
   padding: 0;
   margin: 0;
-}
-
-body, input {
-  color: var(--on-background);
 }
