--- a/src/shared/components/button/styles.module.scss
+++ b/src/shared/components/button/styles.module.scss
@@ -1,8 +1,7 @@
 @use "theme.utils" as theme;
 
-
 .button {
-  padding: theme.spacing(0.8) theme.spacing(2);
+  padding: theme.spacing(0.6) theme.spacing(1);
   border-radius: var(--radius-sm);
   border: none;
   cursor: pointer;
@@ -16,22 +15,33 @@
   background-color: var(--#{$color});
   color: var(--on-#{$color});
   stroke: var(--on-#{$color});
+  border: var(--border) solid transparent;
+  transition-property: background-color;
+  transition: 0.08s ease;
+  box-shadow: 4px 4px 8px 1px var(--shadow-color);
 
-  &:hover {
-    background-color: var(--#{$color}-600);
+  &:hover,
+  &:focus {
+    background-color: var(--#{$color}-hover-bg);
+    border-color: var(--#{$color}-hover-border);
   }
 
   &:active {
-    background-color: var(--#{$color}-500);
+    background-color: var(--#{$color}-active-bg);
+    border: var(--border) solid var(--#{$color}-active-border);
+    color: var(--#{$color}-on-active-bg);
+    stroke: var(--#{$color}-on-active-bg);
   }
 
   &:disabled {
-    background-color: var(--disabled);
+    background-color: var(--#{$color}-disabled-bg);
+    color: var(--#{$color}-on-disabled-bg);
+    stroke: var(--#{$color}-on-disabled-bg);
     cursor: not-allowed;
   }
 
   &:focus {
-    outline: var(--#{$color}-700) solid 2px;
+    outline: none;
   }
 }
 
