--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -1,84 +1,104 @@
 @use "sass:map";
 
+$pallete: (
+  "primary-100": hsl(222, 45%, 90%),
+  "primary-200": hsl(222, 45%, 80%),
+  "primary-300": hsl(222, 46%, 70%),
+  "primary-400": hsl(222, 46%, 60%),
+  "primary-500": hsl(222, 46%, 50%),
+  "primary-600": hsl(222, 46%, 40%),
+  "primary-700": hsl(222, 46%, 30%),
+  "primary-800": hsl(222, 45%, 20%),
+  "primary-900": hsl(222, 45%, 10%),
+  //
+  "background-body": hsl(220, 23%, 96%),
+  "shadow-color": hsl(225, 25%, 30%),
+  //
+  "neutral-100": hsl(226, 25%, 90%),
+  "neutral-200": hsl(224, 25%, 80%),
+  "neutral-300": hsl(225, 25%, 70%),
+  "neutral-400": hsl(226, 25%, 60%),
+  "neutral-500": hsl(225, 25%, 50%),
+  "neutral-600": hsl(226, 25%, 40%),
+  "neutral-700": hsl(225, 25%, 30%),
+  "neutral-800": hsl(224, 25%, 20%),
+  "neutral-900": hsl(226, 25%, 10%),
+  //
+  "secondary-100": hsl(222, 65%, 90%),
+  "secondary-200": hsl(222, 65%, 80%),
+  "secondary-300": hsl(222, 65%, 70%),
+  "secondary-400": hsl(222, 65%, 60%),
+  "secondary-500": hsl(222, 65%, 50%),
+  "secondary-600": hsl(222, 65%, 40%),
+  "secondary-700": hsl(222, 65%, 30%),
+  "secondary-800": hsl(222, 65%, 20%),
+  "secondary-900": hsl(222, 65%, 10%),
+  //
+  "accent-100": hsl(224, 80%, 90%),
+  "accent-200": hsl(223, 82%, 80%),
+  "accent-300": hsl(223, 82%, 70%),
+  "accent-400": hsl(223, 82%, 60%),
+  "accent-500": hsl(223, 82%, 50%),
+  "accent-600": hsl(223, 82%, 40%),
+  "accent-700": hsl(223, 82%, 30%),
+  "accent-800": hsl(223, 82%, 20%),
+  "accent-900": hsl(224, 80%, 10%),
+  //
+  "danger-100": hsl(0, 79%, 94%),
+  "danger-200": hsl(0, 79%, 83%),
+  "danger-300": hsl(0, 80%, 72%),
+  "danger-400": hsl(0, 80%, 61%),
+  "danger-500": hsl(0, 80%, 50%),
+  "danger-600": hsl(0, 80%, 39%),
+  "danger-700": hsl(0, 80%, 28%),
+  "danger-800": hsl(0, 81%, 16%),
+  "danger-900": hsl(0, 79%, 5%),
+);
+
 $themes: (
   "light": (
-    "text": hsl(210, 11%, 7%),
-    "background": hsl(225, 25%, 97%),
-    "on-background": hsl(210, 11%, 7%),
-    "primary": hsl(222, 46%, 25%),
-    "on-primary": hsl(225, 25%, 97%),
-    "secondary": hsl(222, 65%, 69%),
-    "on-secondary": hsl(210, 11%, 7%),
-    "accent": hsl(223, 82%, 49%),
-
-    "text-50": hsl(220, 12%, 95%),
-    "text-100": hsl(204, 10%, 90%),
-    "text-200": hsl(210, 12%, 80%),
-    "text-300": hsl(208, 11%, 70%),
-    "text-400": hsl(210, 11%, 60%),
-    "text-500": hsl(211, 11%, 50%),
-    "text-600": hsl(210, 11%, 40%),
-    "text-700": hsl(212, 11%, 30%),
-    "text-800": hsl(210, 12%, 20%),
-    "text-900": hsl(216, 10%, 10%),
-    "text-950": hsl(200, 12%, 5%),
-
-    "background-50": hsl(220, 23%, 95%),
-    "background-100": hsl(226, 25%, 90%),
-    "background-200": hsl(224, 25%, 80%),
-    "background-300": hsl(225, 25%, 70%),
-    "background-400": hsl(226, 25%, 60%),
-    "background-500": hsl(225, 25%, 50%),
-    "background-600": hsl(226, 25%, 40%),
-    "background-700": hsl(225, 25%, 30%),
-    "background-800": hsl(224, 25%, 20%),
-    "background-900": hsl(226, 25%, 10%),
-    "background-950": hsl(230, 23%, 5%),
-
-    "primary-50": hsl(220, 46%, 95%),
-    "primary-100": hsl(222, 45%, 90%),
-    "primary-200": hsl(222, 45%, 80%),
-    "primary-300": hsl(222, 46%, 70%),
-    "primary-400": hsl(222, 46%, 60%),
-    "primary-500": hsl(222, 46%, 50%),
-    "primary-600": hsl(222, 46%, 40%),
-    "primary-700": hsl(222, 46%, 30%),
-    "primary-800": hsl(222, 45%, 20%),
-    "primary-900": hsl(222, 45%, 10%),
-    "primary-950": hsl(225, 46%, 5%),
-
-    "secondary-50": hsl(222, 68%, 95%),
-    "secondary-100": hsl(222, 65%, 90%),
-    "secondary-200": hsl(222, 65%, 80%),
-    "secondary-300": hsl(222, 65%, 70%),
-    "secondary-400": hsl(222, 65%, 60%),
-    "secondary-500": hsl(222, 65%, 50%),
-    "secondary-600": hsl(222, 65%, 40%),
-    "secondary-700": hsl(222, 65%, 30%),
-    "secondary-800": hsl(222, 65%, 20%),
-    "secondary-900": hsl(222, 65%, 10%),
-    "secondary-950": hsl(222, 68%, 5%),
-
-    "accent-50": hsl(223, 84%, 95%),
-    "accent-100": hsl(224, 80%, 90%),
-    "accent-200": hsl(223, 82%, 80%),
-    "accent-300": hsl(223, 82%, 70%),
-    "accent-400": hsl(223, 82%, 60%),
-    "accent-500": hsl(223, 82%, 50%),
-    "accent-600": hsl(223, 82%, 40%),
-    "accent-700": hsl(223, 82%, 30%),
-    "accent-800": hsl(223, 82%, 20%),
-    "accent-900": hsl(224, 80%, 10%),
-    "accent-950": hsl(223, 84%, 5%),
-
+    "background": map.get($pallete, "background-body"),
+    "on-background": map.get($pallete, "neutral-900"),
+    "background-level1": map.get($pallete, "neutral-100"),
+    "background-level2": map.get($pallete, "neutral-200"),
+    "background-level3": map.get($pallete, "neutral-300"),
+    "shadow-color": map.get($pallete, "shadow-color"),
+    //
+    "primary": map.get($pallete, "primary-500"),
+    "on-primary": map.get($pallete, "neutral-100"),
+    "primary-hover-bg": map.get($pallete, "primary-600"),
+    "primary-hover-border": map.get($pallete, "primary-600"),
+    "primary-active-bg": map.get($pallete, "primary-700"),
+    "primary-active-border": map.get($pallete, "primary-700"),
+    "primary-on-active-bg": map.get($pallete, "neutral-200"),
+    "primary-disabled-bg": map.get($pallete, "neutral-400"),
+    "primary-on-disabled-bg": map.get($pallete, "neutral-100"),
+    //
+    "secondary": map.get($pallete, "secondary-500"),
+    "on-secondary": map.get($pallete, "neutral-100"),
+    "secondary-hover-bg": map.get($pallete, "secondary-600"),
+    "secondary-hover-border": map.get($pallete, "secondary-600"),
+    "secondary-active-bg": map.get($pallete, "secondary-700"),
+    "secondary-active-border": map.get($pallete, "secondary-700"),
+    "secondary-on-active-bg": map.get($pallete, "neutral-200"),
+    "secondary-disabled-bg": map.get($pallete, "neutral-400"),
+    "secondary-on-disabled-bg": map.get($pallete, "neutral-100"),
+    //
+    "danger": map.get($pallete, "danger-500"),
+    "on-danger": map.get($pallete, "neutral-100"),
+    "danger-hover-bg": map.get($pallete, "danger-600"),
+    "danger-hover-border": map.get($pallete, "danger-600"),
+    "danger-active-bg": map.get($pallete, "danger-700"),
+    "danger-active-border": map.get($pallete, "danger-700"),
+    "danger-on-active-bg": map.get($pallete, "neutral-200"),
+    "danger-disabled-bg": map.get($pallete, "neutral-400"),
+    "danger-on-disabled-bg": map.get($pallete, "neutral-100"),
+    //
     "static-5": hsla(0, 0%, 0%, 0.05),
     "static-10": hsla(0, 0%, 0%, 0.1),
     "static-40": hsla(0, 0%, 0%, 0.4),
-    "danger": hsl(0, 80%, 45%),
-    "danger-500": hsl(0, 80%, 50%),
     "success": hsl(120, 75%, 45%),
     "success-500": hsl(120, 75%, 50%),
-    "disabled": hsla(0, 0%, 0%, 0.05),
   ),
   "dark": (
     "text": hsl(210, 11%, 93%),
@@ -89,7 +109,6 @@ $themes: (
     "secondary": hsl(222, 65%, 31%),
     "on-secondary": hsl(210, 11%, 93%),
     "accent": hsl(223, 82%, 51%),
-
     "text-50": hsl(200, 12%, 5%),
     "text-100": hsl(216, 10%, 10%),
     "text-200": hsl(210, 12%, 20%),
@@ -101,7 +120,6 @@ $themes: (
     "text-800": hsl(210, 12%, 80%),
     "text-900": hsl(204, 10%, 90%),
     "text-950": hsl(220, 12%, 95%),
-
     "background-50": hsl(230, 23%, 5%),
     "background-100": hsl(226, 25%, 10%),
     "background-200": hsl(224, 25%, 20%),
@@ -113,7 +131,6 @@ $themes: (
     "background-800": hsl(224, 25%, 80%),
     "background-900": hsl(226, 25%, 90%),
     "background-950": hsl(220, 23%, 95%),
-
     "primary-50": hsl(225, 46%, 5%),
     "primary-100": hsl(222, 45%, 10%),
     "primary-200": hsl(222, 45%, 20%),
@@ -125,7 +142,6 @@ $themes: (
     "primary-800": hsl(222, 45%, 80%),
     "primary-900": hsl(222, 45%, 90%),
     "primary-950": hsl(220, 46%, 95%),
-
     "secondary-50": hsl(222, 68%, 5%),
     "secondary-100": hsl(222, 65%, 10%),
     "secondary-200": hsl(222, 65%, 20%),
@@ -137,7 +153,6 @@ $themes: (
     "secondary-800": hsl(222, 65%, 80%),
     "secondary-900": hsl(222, 65%, 90%),
     "secondary-950": hsl(222, 68%, 95%),
-
     "accent-50": hsl(223, 84%, 5%),
     "accent-100": hsl(224, 80%, 10%),
     "accent-200": hsl(223, 82%, 20%),
@@ -149,7 +164,6 @@ $themes: (
     "accent-800": hsl(223, 82%, 80%),
     "accent-900": hsl(224, 80%, 90%),
     "accent-950": hsl(223, 84%, 95%),
-
     "static-5": hsla(0, 0%, 100%, 0.05),
     "static-10": hsla(0, 0%, 100%, 0.1),
     "static-40": hsla(0, 0%, 100%, 0.4),
@@ -204,5 +218,5 @@ $themes: (
   --radius-sm: var(--radius);
   --radius-md: calc(var(--radius) * 1.5);
   --radius-lg: calc(var(--radius) * 2);
-  --border: 0.4rem;
+  --border: 0.2rem;
 }
