--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -170,7 +170,7 @@ $themes: (
     "success-hover-border": map.get($pallete, "success-600"),
     "success-active-bg": map.get($pallete, "success-700"),
     "success-active-border": map.get($pallete, "success-700"),
-    "success-on-active-bg": map.get($pallete, "neutral-200"),
+    "success-on-active-bg": map.get($pallete, "neutral-900"),
     "success-disabled-bg": map.get($pallete, "neutral-400"),
     "success-on-disabled-bg": map.get($pallete, "neutral-100"),
     // Success light variant
@@ -201,6 +201,25 @@ $themes: (
     "warning-light-on-active-bg": map.get($pallete, "warning-700"),
     "warning-light-disabled-bg": map.get($pallete, "neutral-800"),
     "warning-light-on-disabled-bg": map.get($pallete, "neutral-400"),
+    // Neutral variant
+    "neutral": map.get($pallete, "neutral-500"),
+    "on-neutral": map.get($pallete, "black"),
+    "neutral-hover-bg": map.get($pallete, "neutral-600"),
+    "neutral-hover-border": map.get($pallete, "neutral-600"),
+    "neutral-active-bg": map.get($pallete, "neutral-700"),
+    "neutral-active-border": map.get($pallete, "neutral-700"),
+    "neutral-on-active-bg": map.get($pallete, "neutral-200"),
+    "neutral-disabled-bg": map.get($pallete, "neutral-400"),
+    "neutral-on-disabled-bg": map.get($pallete, "neutral-100"),
+    // Neutral light variant
+    "on-neutral-light": map.get($pallete, "neutral-800"),
+    "neutral-light-hover-bg": map.get($pallete, "neutral-200"),
+    "neutral-light-hover-border": map.get($pallete, "neutral-200"),
+    "neutral-light-active-bg": map.get($pallete, "neutral-300"),
+    "neutral-light-active-border": map.get($pallete, "neutral-300"),
+    "neutral-light-on-active-bg": map.get($pallete, "neutral-900"),
+    "neutral-light-disabled-bg": map.get($pallete, "neutral-800"),
+    "neutral-light-on-disabled-bg": map.get($pallete, "neutral-400"),
     // Static
     "static-5": hsla(0, 0%, 0%, 0.05),
     "static-10": hsla(0, 0%, 0%, 0.1),
