--- a/app/globals.scss
+++ b/app/globals.scss
@@ -2,7 +2,9 @@
 @use "typography";
 @use "theme.utils" as utils;
 
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
 }
 
@@ -12,4 +14,10 @@ body {
   color: var(--on-background);
   padding: 0;
   margin: 0;
+}
+
+#sidedrawer-toggle:focus-within {
+  ~ #sidedrawer {
+    background-color: red;
+  }
 }
