--- a/src/shared/components/sidebar/app/styles.module.scss
+++ b/src/shared/components/sidebar/app/styles.module.scss
@@ -1,27 +1,8 @@
 @use "theme.utils" as theme;
 
 $width: 80dvw;
-$anim-duration: 0.2s;
+$anim-duration: 0.25s;
 $anim-timing-function: ease-in-out;
-
-.sidebar-container:focus-within {
-  .sidebar {
-    left: 0;
-  }
-  .sidebar::after {
-    content: "";
-    height: 100dvh;
-    width: 100dvw;
-    background-color: black;
-    opacity: 0%;
-    animation: $anim-duration backdrop $anim-timing-function;
-    animation-fill-mode: forwards;
-    position: fixed;
-    left: 0;
-    top: 0;
-    bottom: 0;
-  }
-}
 
 .sidebar {
   height: 100dvh;
@@ -35,6 +16,28 @@ $anim-timing-function: ease-in-out;
   transition-property: width;
   transition: $anim-duration $anim-timing-function;
   padding: theme.spacing(2);
+
+  &.opened {
+    left: 0;
+  }
+}
+
+.backdrop {
+  height: 100dvh;
+  width: 100dvw;
+  background-color: black;
+  opacity: 0%;
+  position: fixed;
+  left: -100dvw;
+  top: 0;
+  bottom: 0;
+  z-index: 1000;
+  
+  &.opened {
+    left: 0;
+    animation: $anim-duration backdrop $anim-timing-function;
+    animation-fill-mode: forwards;
+  }
 }
 
 @keyframes backdrop {
