--- a/src/shared/components/sidebar/app/styles.module.scss
+++ b/src/shared/components/sidebar/app/styles.module.scss
@@ -8,43 +8,83 @@ $anim-timing-function: ease-in-out;
   height: 100dvh;
   width: $width;
   position: fixed;
-  left: -$width;
   top: 0;
   bottom: 0;
   background-color: var(--background);
   z-index: 1000;
-  transition-property: width;
-  transition: $anim-duration $anim-timing-function;
   padding: theme.spacing(2);
 
-  &.opened {
-    left: 0;
+  &.in {
+    animation: $anim-duration sidebar-in $anim-timing-function;
+    animation-fill-mode: forwards;
+  }
+
+  &.out {
+    animation: $anim-duration sidebar-out $anim-timing-function;
+    animation-fill-mode: forwards;
   }
 }
 
 .backdrop {
   height: 100dvh;
-  width: 100dvw;
   background-color: black;
-  opacity: 0%;
   position: fixed;
-  left: -100dvw;
   top: 0;
   bottom: 0;
   z-index: 1000;
-  
-  &.opened {
-    left: 0;
-    animation: $anim-duration backdrop $anim-timing-function;
+
+  &.in {
+    animation: $anim-duration backdrop-in $anim-timing-function;
+    animation-fill-mode: forwards;
+  }
+
+  &.out {
+    animation: $anim-duration backdrop-out $anim-timing-function;
     animation-fill-mode: forwards;
   }
 }
 
-@keyframes backdrop {
+@keyframes backdrop-in {
+  from {
+    opacity: 0%;
+    width: 100dvw;
+    left: 0;
+  }
   to {
     opacity: 30%;
     width: calc(100dvw - $width);
     left: $width;
+  }
+}
+
+@keyframes backdrop-out {
+  from {
+    opacity: 30%;
+    width: calc(100dvw - $width);
+    left: $width;
+  }
+  to {
+    opacity: 0%;
+    width: 100dvw;
+    left: 0;
+  }
+}
+
+@keyframes sidebar-in {
+  from {
+    left: -$width;
+  }
+  to {
+    left: 0;
+  }
+}
+
+@keyframes sidebar-out {
+  from {
+    left: 0;
+  }
+  to {
+    left: -$width;
   }
 }
 
