Add List and remove unused packages

--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -202,14 +202,14 @@ $themes: (
     "warning-light-disabled-bg": map.get($pallete, "neutral-800"),
     "warning-light-on-disabled-bg": map.get($pallete, "neutral-400"),
     // Neutral variant
-    "neutral": map.get($pallete, "neutral-500"),
-    "on-neutral": map.get($pallete, "black"),
-    "neutral-hover-bg": map.get($pallete, "neutral-600"),
-    "neutral-hover-border": map.get($pallete, "neutral-600"),
-    "neutral-active-bg": map.get($pallete, "neutral-700"),
-    "neutral-active-border": map.get($pallete, "neutral-700"),
+    "neutral": map.get($pallete, "neutral-600"),
+    "on-neutral": map.get($pallete, "white"),
+    "neutral-hover-bg": map.get($pallete, "neutral-700"),
+    "neutral-hover-border": map.get($pallete, "neutral-700"),
+    "neutral-active-bg": map.get($pallete, "neutral-800"),
+    "neutral-active-border": map.get($pallete, "neutral-800"),
     "neutral-on-active-bg": map.get($pallete, "neutral-200"),
-    "neutral-disabled-bg": map.get($pallete, "neutral-400"),
+    "neutral-disabled-bg": map.get($pallete, "neutral-500"),
     "neutral-on-disabled-bg": map.get($pallete, "neutral-100"),
     // Neutral light variant
     "on-neutral-light": map.get($pallete, "neutral-800"),
