--- a/src/shared/components/button/styles.module.scss
+++ b/src/shared/components/button/styles.module.scss
@@ -12,6 +12,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
+  gap: theme.spacing(1);
 }
 
 @mixin solid($color) {
