--- a/app/[lang]/login/styles.module.scss
+++ b/app/[lang]/login/styles.module.scss
@@ -1,5 +1,11 @@
+@use "theme.utils" as theme;
+
 .title-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.layout {
+  padding: theme.spacing(2);
 }
