--- a/app/[lang]/register/styles.module.scss
+++ b/app/[lang]/register/styles.module.scss
@@ -1,5 +1,13 @@
+@use "theme.utils" as theme;
+
 .title-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.layout {
+  padding: theme.spacing(2);
+  display: flex;
+  flex-direction: column;
 }
