--- a/src/shared/components/button/styles.module.scss
+++ b/src/shared/components/button/styles.module.scss
@@ -1,5 +1,4 @@
 @use "theme.utils" as theme;
-@use "colors.utils" as colors;
 
 .button {
   padding: theme.spacing(0.6) theme.spacing(1);
@@ -78,7 +77,7 @@
   }
 }
 
-@each $color in colors.$colors {
+@each $color in theme.$colors {
   .solid.#{$color} {
     @include solid("#{$color}");
   }
