--- a/src/shared/components/list/styles.module.scss
+++ b/src/shared/components/list/styles.module.scss
@@ -1,5 +1,53 @@
+@use "theme.utils" as theme;
+
 .list {
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+.item {
+  padding-bottom: theme.spacing(1);
+  margin: 0;
+}
+
+@mixin light($color) {
+  background-color: transparent;
+  color: var(--on-#{$color});
+  stroke: var(--on-#{$color});
+
+  &:hover {
+    background-color: var(--#{$color}-hover-bg);
+    border-color: var(--#{$color}-hover-border);
+  }
+
+  &:active {
+    background-color: var(--#{$color}-active-bg);
+    border-color: var(--#{$color}-active-border);
+    color: var(--#{$color}-on-active-bg);
+    stroke: var(--#{$color}-on-active-bg);
+  }
+
+  &:disabled {
+    background-color: transparent;
+    border-color: transparent;
+    color: var(--#{$color}-on-disabled-bg);
+    stroke: var(--#{$color}-on-disabled-bg);
+    cursor: not-allowed;
+  }
+
+  &:focus {
+    outline: var(--#{$color}-active-border) solid var(--border);
+  }
+}
+
+.item-anchor {
+  text-decoration: none;
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: theme.spacing(1);
+  border: var(--border) solid transparent;
+  border-radius: var(--radius);
+  @include light("neutral-light");
 }
