--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -1,5 +1,5 @@
 @use "sass:map";
-@use "./colors.utils.scss";
+@use "theme.utils" as themeutils;
 
 $pallete: (
   // Primary
@@ -26,7 +26,7 @@ $pallete: (
   "neutral-600": hsl(240, 2%, 40%),
   "neutral-700": hsl(240, 2%, 30%),
   "neutral-800": hsl(240, 2%, 20%),
-  "neutral-900": hsl(240, 2%, 12%),
+  "neutral-900": hsl(240, 2%, 13%),
   // Secondary
   "secondary-100": hsl(222, 65%, 90%),
   "secondary-200": hsl(222, 65%, 80%),
@@ -213,12 +213,12 @@ $themes: (
     "neutral-on-disabled-bg": map.get($pallete, "neutral-100"),
     // Neutral light variant
     "on-neutral-light": map.get($pallete, "neutral-800"),
-    "neutral-light-hover-bg": map.get($pallete, "neutral-200"),
-    "neutral-light-hover-border": map.get($pallete, "neutral-200"),
-    "neutral-light-active-bg": map.get($pallete, "neutral-300"),
-    "neutral-light-active-border": map.get($pallete, "neutral-300"),
+    "neutral-light-hover-bg": map.get($pallete, "neutral-300"),
+    "neutral-light-hover-border": map.get($pallete, "neutral-300"),
+    "neutral-light-active-bg": map.get($pallete, "neutral-400"),
+    "neutral-light-active-border": map.get($pallete, "neutral-400"),
     "neutral-light-on-active-bg": map.get($pallete, "neutral-900"),
-    "neutral-light-disabled-bg": map.get($pallete, "neutral-800"),
+    "neutral-light-disabled-bg": map.get($pallete, "neutral-700"),
     "neutral-light-on-disabled-bg": map.get($pallete, "neutral-400"),
     // Static
     "static-5": hsla(0, 0%, 0%, 0.05),
@@ -323,4 +323,16 @@ $themes: (
   --radius-lg: calc(var(--radius) * 3);
   --border: 0.2rem;
   --border-sm: var(--border);
+}
+
+@each $color in themeutils.$colors {
+  .bg-#{$color} {
+    background-color: var(--#{$color});
+  }
+  .color-#{$color} {
+    color: var(--#{$color});
+  }
+  .stroke-#{$color} {
+    stroke: var(--#{$color});
+  }
 }
