--- a/src/shared/components/sidebar/app/styles.module.scss
+++ b/src/shared/components/sidebar/app/styles.module.scss
@@ -92,4 +92,5 @@ $anim-timing-function: ease-in-out;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: theme.spacing(2);
 }
